Pacientes listo y heredado, Horas medicas con producto y estado

--- a/views/horasmedicas.xml
+++ b/views/horasmedicas.xml
@@ -37,6 +37,7 @@
                   <sheet>
                         <group string="Datos Hora Medica">
                             <field name="company"/>
+                            <field name="tipo_prestacion" attrs="{'readonly':[('state','!=','draft')]}"/>
                             <field name="paciente" attrs="{'readonly':[('state','!=','draft')]}"/>
                             <field name="fecha_solicitud_hora" attrs="{'readonly':[('state','!=','draft')]}"/>
                             <field name="fecha_solicitud_hora_termino" attrs="{'readonly':[('state','!=','draft')]}"/>
