--- a/views/partner.xml
+++ b/views/partner.xml
@@ -14,6 +14,17 @@
             <field name="model">res.partner</field>
             <field name="inherit_id" ref="base.view_partner_form"/>
             <field name="arch" type="xml">
+                <xpath expr="//field[@name='mobile']" position="attributes">
+                    <attribute name="required">True</attribute>
+                </xpath>
+                <xpath expr="//field[@name='vat']" position="attributes">
+                    <attribute name="required">True</attribute>
+                </xpath>
+
+
+                <field name="type" position="before">
+                    <field name="fecha_nacimiento"/>
+                </field>
                 <field name="category_id" position="after">
                     <field name="antecedentes_medicos"/>
                 </field>
