--- a/views/horasmedicas.xml
+++ b/views/horasmedicas.xml
@@ -15,8 +15,14 @@
 
                 <tree string="Horas Medica">
                     <field name="company"/>
+                    <field name="paciente"/>
+                    <field name="tipo_prestacion"/>
+                    <field name="forma_de_pago"/>
                     <field name="fecha_solicitud_hora"/>
-                    <field name="antecedentes_paciente"/>
+                    <field name="fecha_solicitud_hora"/>
+                    <field name="fecha_solicitud_hora_termino"/>
+                    <field name="state"/>
+
                 </tree>
             </field>
     </record>
@@ -35,16 +41,26 @@
                      <field name="state" widget="statusbar" string="Estado PM"/>
                   </header>
                   <sheet>
-                        <group string="Datos Hora Medica">
+                      <group string="Datos Hora Medica">
                             <field name="company"/>
                             <field name="tipo_prestacion" attrs="{'readonly':[('state','!=','draft')]}"/>
                             <field name="paciente" attrs="{'readonly':[('state','!=','draft')]}"/>
                             <field name="fecha_solicitud_hora" attrs="{'readonly':[('state','!=','draft')]}"/>
                             <field name="fecha_solicitud_hora_termino" attrs="{'readonly':[('state','!=','draft')]}"/>
                             <field name="forma_de_pago" />
-                        </group>
+                      </group>
+                      <group string="Pago Prestación">
+                            <field name="id_ventas"/>
 
-                    </sheet>
+                      </group>
+
+
+
+                  </sheet>
+                  <div class="oe_chatter">
+                        <field name="message_follower_ids" widget="mail_followers"/>
+                        <field name="message_ids" widget="mail_thread"/>
+                   </div>
                 </form>
             </field>
     </record>
