--- a/views/menus.xml
+++ b/views/menus.xml
@@ -10,19 +10,15 @@
 
         <menuitem id="menu_horas_medicas" name="Horas Medicas" parent="menu_principal_horas_medicas" action="horasmedicas_list_action" sequence="3"/>
 
-
-        <menuitem id="parametros_menu" name="Parametros" parent="main_menu_mediges" sequence="4"/>
-
-        <menuitem id="menu_formas_de_pagos" name="Formas de Pago" parent="parametros_menu" action="formas_de_pago_list_action" sequence="5"/>
-
-        <menuitem id="menu_productos" name="Productos Medicos" parent="parametros_menu" action="productos_list_action" sequence="6"/>
+        <menuitem id="menu_horas_medicas_doctor" name="Visitas" parent="menu_principal_horas_medicas" action="horasmedicas_doctor_list_action" sequence="4"/>
 
 
 
+        <menuitem id="parametros_menu" name="Parametros" parent="main_menu_mediges" sequence="5"/>
 
+        <menuitem id="menu_formas_de_pagos" name="Formas de Pago" parent="parametros_menu" action="formas_de_pago_list_action" sequence="6"/>
 
-
-
+        <menuitem id="menu_productos" name="Productos Medicos" parent="parametros_menu" action="productos_list_action" sequence="7"/>
 
 
     </data>
