--- a/views/horasmedicas.xml
+++ b/views/horasmedicas.xml
@@ -21,8 +21,8 @@
                     <field name="fecha_solicitud_hora"/>
                     <field name="fecha_solicitud_hora_termino"/>
                     <field name="state"/>
-                    <field name="create_uid"/>
-                    <field name="create_date"/>
+                    <field name="create_uid" string="Creada por"/>
+                    <field name="create_date" string="Creada el"/>
 
                 </tree>
             </field>
@@ -49,7 +49,24 @@
                             <field name="paciente" attrs="{'readonly':[('state','!=','draft')]}"/>
                             <field name="fecha_solicitud_hora" attrs="{'readonly':[('state','!=','draft')]}"/>
                             <field name="fecha_solicitud_hora_termino" attrs="{'readonly':[('state','!=','draft')]}"/>
-                            <field name="forma_de_pago" domain="[('company_id','=',company)]"/>
+                            <field name="forma_de_pago" domain="[('company_id','=',company)]" attrs="{'readonly':[('state','!=','draft')]}"/>
+                      </group>
+                      <group string="Datos Visita">
+                            <field name="fecha_solicitud_hora" attrs="{'readonly':[('state','!=','draft')]}"/>
+                              <field name="anamnesis" attrs="{'readonly':[('state','!=','draft')]}" />
+                              <field name="diagnostico"  attrs="{'readonly':[('state','!=','draft')]}"/>
+
+                      </group>
+                      <group string="Indicaciones">
+                            <field name="prescricion_id" attrs="{'readonly':[('state','!=','draft')]}">
+                                <tree string="Productos" editable="bottom">
+                                    <field name="medicamento_id"/>
+                                    <field name="cantidad" witget="Interger"/>
+                                    <field name="tipo_unidad"/>
+                                    <field name="periodo"/>
+                                </tree>
+                            </field>
+                            <field name="Observacion" attrs="{'readonly':[('state','!=','draft')]}" />
                       </group>
                       <group string="Pago Prestación">
                             <field name="id_ventas"/>
@@ -119,6 +136,7 @@
              <field name="domain">[('paciente','=',default_paciente)]</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
+
     </record>
 
     <record model="ir.ui.view" id="visitas_popup_tree_view">
@@ -135,11 +153,16 @@
     </record>
 
     <record model="ir.actions.act_window.view" id="action_visitas_popup_tree_view">
-        <field name="sequence" eval="3"/>
+        <field name="sequence" eval="1"/>
         <field name="view_mode">tree</field>
         <field name="view_id" ref="visitas_popup_tree_view"/>
         <field name="act_window_id" ref="visitas_popup_list_action"/>
     </record>
+
+
+
+
+        <!-- Visitas FIN -->
 
     <record model="ir.ui.view" id="horas_doctor_form_view">
             <field name="name">Visita</field>
@@ -152,7 +175,7 @@
                   </header>
                   <sheet>
                     <div class="oe_button_box" name="button_box">
-                        <button type="action" class="oe_stat_button" icon="fa-archive"
+                        <button type="action" class="oe_stat_button" icon="fa-archive" string="Visitas Anteriores"
                                   name="%(visitas_popup_list_action)d" context="{'default_paciente':paciente}">
 
                         </button>
@@ -168,12 +191,12 @@
                           </group>
                           <group string="Datos Visita">
                             <field name="fecha_solicitud_hora" attrs="{'readonly':[('state','!=','draft')]}"/>
-                            <field name="fecha_solicitud_hora_termino" attrs="{'readonly':[('state','!=','draft')]}" />
-                            <field name="diagnostico" />
-                            <field name="Observacion" />
+                              <field name="anamnesis" />
+                              <field name="diagnostico" />
+
                           </group>
                       </group>
-                      <group string="Prescripción">
+                      <group string="Indicaciones">
                             <field name="prescricion_id">
                                 <tree string="Productos" editable="bottom">
                                     <field name="medicamento_id"/>
@@ -182,6 +205,7 @@
                                     <field name="periodo"/>
                                 </tree>
                             </field>
+                            <field name="Observacion" />
                       </group>
 
                   </sheet>
