--- a/views/menus.xml
+++ b/views/menus.xml
@@ -6,7 +6,7 @@
 
         <menuitem id="menu_principal_horas_medicas" name="Horas Medicas" parent="main_menu_mediges" sequence="1"/>
 
-        <menuitem id="menu_pacientes" name="Pacientes" parent="menu_principal_horas_medicas" action="pacientes_list_action" sequence="2"/>
+        <menuitem id="menu_pacientes" name="Ficha Paciente" parent="menu_principal_horas_medicas" action="pacientes_list_action" sequence="2"/>
 
         <menuitem id="menu_horas_medicas" name="Horas Medicas" parent="menu_principal_horas_medicas" action="horasmedicas_list_action" sequence="3"/>
 
