--- a/views/horasmedicas.xml
+++ b/views/horasmedicas.xml
@@ -51,13 +51,13 @@
                             <field name="fecha_solicitud_hora_termino" attrs="{'readonly':[('state','!=','draft')]}"/>
                             <field name="forma_de_pago" domain="[('company_id','=',company)]" attrs="{'readonly':[('state','!=','draft')]}"/>
                       </group>
-                      <group string="Datos Visita">
-                            <field name="fecha_solicitud_hora" attrs="{'readonly':[('state','!=','draft')]}"/>
+                      <group string="Datos Visita" groups="mediges.group_hm_doctor" >
+                            <field name="fecha_solicitud_hora" attrs="{'readonly':[('state','!=','draft')]}" />
                               <field name="anamnesis" attrs="{'readonly':[('state','!=','draft')]}" />
-                              <field name="diagnostico"  attrs="{'readonly':[('state','!=','draft')]}"/>
+                              <field name="diagnostico"  attrs="{'readonly':[('state','!=','draft')]}" />
 
                       </group>
-                      <group string="Indicaciones">
+                      <group string="Indicaciones" groups="mediges.group_hm_doctor">
                             <field name="prescricion_id" attrs="{'readonly':[('state','!=','draft')]}">
                                 <tree string="Productos" editable="bottom">
                                     <field name="medicamento_id"/>
@@ -93,28 +93,42 @@
             </field>
     </record>
 
+    <record id="horasmedicas_search" model="ir.ui.view">
+        <field name="name">Vistas buscar</field>
+        <field name="model">mediges.horasmedicas</field>
+        <field name="arch" type="xml">
+            <search string="Buscar">
 
+                <filter string="Hoy" name="filtro_hoy" domain="[('fecha_solicitud_hora','&gt;=',time.strftime('%%Y-%%m-%%d'))]"/>
+
+            </search>
+        </field>
+    </record>
 
     <record id="horasmedicas_doctor_list_action" model="ir.actions.act_window">
             <field name="name">Visitas Medicas</field>
             <field name="res_model">mediges.horasmedicas</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree,form</field>
+            <field name="context">{"search_default_filtro_hoy":1}</field>
+            <field name="search_view_id" ref="horasmedicas_search"/>
     </record>
+
+
 
      <record model="ir.ui.view" id="horasdoctor_tree_view">
                 <field name="name">Visitas</field>
                 <field name="model">mediges.horasmedicas</field>
                 <field name="arch" type="xml">
-                    <tree string="Visitas">
+                    <tree string="Visitas" create="false">
                         <field name="fecha_solicitud_hora"/>
                         <field name="fecha_solicitud_hora_termino"/>
                         <field name="paciente"/>
                         <field name="tipo_prestacion"/>
                         <field name="forma_de_pago"/>
                         <field name="state"/>
-                        <field name="create_uid"/>
-                        <field name="create_date"/>
+                        <field name="create_uid" string="Creada por"/>
+                        <field name="create_date" string="Creada el" />
                         <field name="company"/>
                     </tree>
                 </field>
@@ -128,7 +142,7 @@
         <field name="act_window_id" ref="horasmedicas_doctor_list_action"/>
     </record>
 
-          <!-- Visitas -->
+          <!-- Visitas Browse -->
 
     <record id="visitas_popup_list_action" model="ir.actions.act_window">
             <field name="name">Visitas Previas</field>
@@ -162,14 +176,17 @@
 
 
 
-        <!-- Visitas FIN -->
+        <!-- Visitas Browse FIN -->
+
+        <!-- Visitas Doctor Browse -->
+
 
     <record model="ir.ui.view" id="horas_doctor_form_view">
             <field name="name">Visita</field>
             <field name="model">mediges.horasmedicas</field>
             <field name="type">form</field>
             <field name="arch" type="xml">
-              <form string="Horas Medicas">
+              <form string="Horas Medicas" create="false">
                   <header>
                      <field name="state" widget="statusbar" string="Estado Visita"/>
                   </header>
@@ -177,7 +194,7 @@
                     <div class="oe_button_box" name="button_box">
                         <button type="action" class="oe_stat_button" icon="fa-archive" string="Visitas Anteriores"
                                   name="%(visitas_popup_list_action)d" context="{'default_paciente':paciente}">
-
+                           
                         </button>
                     </div>
                       <group>
