--- a/views/menus.xml
+++ b/views/menus.xml
@@ -6,19 +6,19 @@
 
         <menuitem id="menu_principal_horas_medicas" name="Horas Medicas" parent="main_menu_mediges" sequence="1"/>
 
-        <menuitem id="menu_pacientes" name="Ficha Paciente" parent="menu_principal_horas_medicas" action="pacientes_list_action" sequence="2"/>
+        <menuitem id="menu_pacientes" name="Ficha Paciente" parent="menu_principal_horas_medicas" action="pacientes_list_action" sequence="3"/>
 
-        <menuitem id="menu_horas_medicas" name="Horas Medicas" parent="menu_principal_horas_medicas" action="horasmedicas_list_action" sequence="3"/>
+        <menuitem id="menu_horas_medicas" name="Horas Medicas" parent="menu_principal_horas_medicas" action="horasmedicas_list_action" sequence="2"/>
 
-        <menuitem id="menu_horas_medicas_doctor" name="Visitas" parent="menu_principal_horas_medicas" action="horasmedicas_doctor_list_action" sequence="4"/>
+        <menuitem id="menu_horas_medicas_doctor" name="Visitas" parent="menu_principal_horas_medicas" action="horasmedicas_doctor_list_action" sequence="1" groups="mediges.group_hm_doctor"/>
 
 
 
         <menuitem id="parametros_menu" name="Parametros" parent="main_menu_mediges" sequence="5"/>
 
-        <menuitem id="menu_formas_de_pagos" name="Formas de Pago" parent="parametros_menu" action="formas_de_pago_list_action" sequence="6"/>
+        <menuitem id="menu_formas_de_pagos" name="Formas de Pago" parent="parametros_menu" action="formas_de_pago_list_action" sequence="6" groups="mediges.group_hm_doctor"/>
 
-        <menuitem id="menu_productos" name="Productos Medicos" parent="parametros_menu" action="productos_list_action" sequence="7"/>
+        <menuitem id="menu_productos" name="Productos Medicos" parent="parametros_menu" action="productos_list_action" sequence="7" groups="mediges.group_hm_doctor"/>
 
 
     </data>
