--- a/views/horasmedicas.xml
+++ b/views/horasmedicas.xml
@@ -2,10 +2,27 @@
     <data>
 
 
+    <record id="horasmedicas_search_secre" model="ir.ui.view">
+        <field name="name">Vistas buscar</field>
+        <field name="model">mediges.horasmedicas</field>
+        <field name="arch" type="xml">
+            <search string="Buscar">
+
+                <filter string="Hoy" name="filtro_hoy"
+                domain="[('fecha_solicitud_hora','&gt;=', datetime.datetime.combine(context_today(), datetime.time(0,0,0))),
+                 ('fecha_solicitud_hora','&lt;=', datetime.datetime.combine(context_today(), datetime.time(23,59,59)))]"/>
+
+            </search>
+        </field>
+    </record>
+
+
     <record model="ir.actions.act_window" id="horasmedicas_list_action">
             <field name="name">Horas Medicas</field>
             <field name="res_model">mediges.horasmedicas</field>
             <field name="view_mode">calendar,tree,form</field>
+            <field name="context">{"search_default_filtro_hoy":1}</field>
+            <field name="search_view_id" ref="horasmedicas_search_secre"/>
         </record>
 
     <record model="ir.ui.view" id="horas_tree_view">
@@ -99,7 +116,9 @@
         <field name="arch" type="xml">
             <search string="Buscar">
 
-                <filter string="Hoy" name="filtro_hoy" domain="[('fecha_solicitud_hora','&gt;=',time.strftime('%%Y-%%m-%%d'))]"/>
+                <filter string="Hoy" name="filtro_hoy"
+                domain="[('fecha_solicitud_hora','&gt;=', datetime.datetime.combine(context_today(), datetime.time(0,0,0))),
+                 ('fecha_solicitud_hora','&lt;=', datetime.datetime.combine(context_today(), datetime.time(23,59,59)))]"/>
 
             </search>
         </field>
