Fix Algunos Domains

--- a/views/horasmedicas.xml
+++ b/views/horasmedicas.xml
@@ -64,7 +64,7 @@
                             <field name="company"/>
                             <field name="tipo_prestacion" domain="[('categ_id','=',3)]" attrs="{'readonly':[('state','!=','draft')]}"
                                    options="{'no_create_edit': True, 'no_quick_create':True}"/>
-                            <field name="paciente" attrs="{'readonly':[('state','!=','draft')]}"/>
+                            <field name="paciente" attrs="{'readonly':[('state','!=','draft')]}" domain="[('is_company','=',False),('name','!=','Administrator')]" />
                             <field name="forma_de_pago" domain="[('company_id','=',company),('tipo_prestacion','=',tipo_prestacion)]" attrs="{'readonly':[('state','!=','draft')]}"
                                     options="{'no_create_edit': True, 'no_quick_create':True}"/>
                             <field name="fecha_solicitud_hora" attrs="{'readonly':[('state','!=','draft')]}"/>
@@ -84,7 +84,7 @@
                       <group string="Indicaciones" groups="mediges.group_hm_doctor">
                             <field name="prescricion_id" attrs="{'readonly':[('state','!=','draft')]}">
                                 <tree string="Productos" editable="bottom">
-                                    <field name="medicamento_id" domain="[('categ_id.name','!=',3)]"/>
+                                    <field name="medicamento_id" domain="[('categ_id','!=',3)]"/>
                                     <field name="cantidad" witget="Interger"/>
                                     <field name="tipo_unidad"/>
                                     <field name="periodo"/>
